unpackaged/main/default/objects/Adam_Bar__c/Adam_Bar__c.object-meta.xml
<CustomObject>
	<description>New details</description>
	<label>Adam Bar</label>
	<nameField>
		<label>Adam Bar Name</label>
		<type>Text</type>
	</nameField>
	<pluralLabel>Adam Bars</pluralLabel>
	<sharingModel>ReadWrite</sharingModel>
</CustomObject>