unpackaged/main/default/objects/Adam_Bar__c/fields/Adam_Bar_Picklist__c.field-meta.xml
<CustomField>
	<fullName>Adam_Bar_Picklist__c</fullName>
	<label>Adam Bar Picklist</label>
	<type>Picklist</type>
	<valueSet>
		<valueSetDefinition>
			<value>
				<fullName>1</fullName>
			</value>
			<value>
				<fullName>3</fullName>
				<default>true</default>
				<label>3</label>
			</value>
			<value>
				<fullName>4</fullName>
			</value>
			<value>
				<fullName>5</fullName>
			</value>
			<value>
				<fullName>6</fullName>
			</value>
			<value>
				<fullName>7</fullName>
			</value>
			<value>
				<fullName>8</fullName>
			</value>
			<value>
				<fullName>9</fullName>
			</value>
			<value>
				<fullName>Ten</fullName>
			</value>
		</valueSetDefinition>
	</valueSet>
</CustomField>