unpackaged/main/default/objects/Adam_Bar__c/fields/another_field__c.field-meta.xml
<CustomField>
	<fullName>another_field__c</fullName>
	<label>another field</label>
	<length>200</length>
	<type>Text</type>
</CustomField>