unpackaged/main/default/objects/Adam_Bar__c/fields/Check_Control__c.field-meta.xml
<CustomField>
	<fullName>Check_Control__c</fullName>
	<defaultValue>false</defaultValue>
	<label>Check Control</label>
	<type>Checkbox</type>
</CustomField>