unpackaged/main/default/objects/Adam_Bar__c/fields/controller__c.field-meta.xml
<CustomField>
	<fullName>controller__c</fullName>
	<label>controller</label>
	<type>Picklist</type>
	<valueSet>
		<restricted>true</restricted>
		<valueSetDefinition>
			<value>
				<fullName>one</fullName>
			</value>
			<value>
				<fullName>two</fullName>
			</value>
			<value>
				<fullName>three</fullName>
			</value>
		</valueSetDefinition>
	</valueSet>
</CustomField>