unpackaged/main/default/objects/Adam_Bar__c/fields/currency__c.field-meta.xml
<CustomField>
	<fullName>currency__c</fullName>
	<label>currency</label>
	<precision>14</precision>
	<scale>2</scale>
	<type>Currency</type>
</CustomField>