unpackaged/main/default/objects/Adam_Bar__c/fields/dominant__c.field-meta.xml
<CustomField>
	<fullName>dominant__c</fullName>
	<label>dominant</label>
	<type>Picklist</type>
	<valueSet>
		<restricted>true</restricted>
		<valueSetDefinition>
			<value>
				<fullName>first</fullName>
			</value>
			<value>
				<fullName>second</fullName>
			</value>
			<value>
				<fullName>third</fullName>
			</value>
			<value>
				<fullName>fourth</fullName>
			</value>
			<value>
				<fullName>fifth</fullName>
			</value>
		</valueSetDefinition>
	</valueSet>
</CustomField>