unpackaged/main/default/objects/Adam_Bar__c/fields/Empty_field__c.field-meta.xml
<CustomField>
	<fullName>Empty_field__c</fullName>
	<label>Empty field</label>
	<length>80</length>
	<type>Text</type>
</CustomField>