unpackaged/main/default/objects/Adam_Bar__c/fields/iscontrolled__c.field-meta.xml
<CustomField>
	<fullName>iscontrolled__c</fullName>
	<label>iscontrolled</label>
	<type>Picklist</type>
	<valueSet>
		<controllingField>dominant__c</controllingField>
		<restricted>true</restricted>
		<valueSetDefinition>
			<value>
				<fullName>first_88090989</fullName>
			</value>
			<value>
				<fullName>first_0980990</fullName>
			</value>
			<value>
				<fullName>third_0980909890</fullName>
			</value>
			<value>
				<fullName>fourth_09090808</fullName>
			</value>
			<value>
				<fullName>fifth_989809890</fullName>
			</value>
		</valueSetDefinition>
	</valueSet>
</CustomField>