unpackaged/main/default/objects/Adam_Bar__c/fields/Metazoa_Test_Field__c.field-meta.xml
<CustomField>
	<fullName>Metazoa_Test_Field__c</fullName>
	<label>Metazoa Test Field</label>
	<length>55</length>
	<type>Text</type>
</CustomField>