unpackaged/main/default/objects/Adam_Bar__c/fields/My_text_area__c.field-meta.xml
<CustomField>
	<fullName>My_text_area__c</fullName>
	<label>My text area</label>
	<type>TextArea</type>
</CustomField>