unpackaged/main/default/objects/Adam_Bar__c/fields/newby__c.field-meta.xml
<CustomField>
	<fullName>newby__c</fullName>
	<label>newby</label>
	<length>200</length>
	<type>Text</type>
</CustomField>