unpackaged/main/default/objects/Adam_Bar__c/fields/percent__c.field-meta.xml
<CustomField>
	<fullName>percent__c</fullName>
	<label>percent</label>
	<precision>18</precision>
	<scale>0</scale>
	<type>Percent</type>
</CustomField>