unpackaged/main/default/objects/Adam_Bar__c/fields/Referral_Source__c.field-meta.xml
<CustomField>
	<fullName>Referral_Source__c</fullName>
	<defaultValue>&quot;none&quot;</defaultValue>
	<label>Referral Source</label>
	<length>32</length>
	<type>Text</type>
</CustomField>