unpackaged/main/default/objects/Adam_Bar__c/fields/subservient__c.field-meta.xml
<CustomField>
	<fullName>subservient__c</fullName>
	<label>subservient</label>
	<type>Picklist</type>
	<valueSet>
		<controllingField>controller__c</controllingField>
		<restricted>true</restricted>
		<valueSetDefinition>
			<value>
				<fullName>one_98989</fullName>
			</value>
			<value>
				<fullName>two_09809890</fullName>
			</value>
			<value>
				<fullName>three_80980989</fullName>
			</value>
			<value>
				<fullName>three_9890890</fullName>
			</value>
			<value>
				<fullName>four_0989090</fullName>
			</value>
		</valueSetDefinition>
	</valueSet>
</CustomField>